fixed conference page arrows

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,3 +48,11 @@ code {
 .dropbtn {
   border-radius: 15%;
 }
+
+.text-toogle[aria-expanded="false"] .bi-chevron-up {
+  display: none;
+}
+
+.text-toogle[aria-expanded="true"] .bi-chevron-right {
+  display: none;
+}
