--- a/css/styles.css
+++ b/css/styles.css
@@ -60,3 +60,34 @@ code {
 .text-toogle[aria-expanded="true"] .bi-chevron-right {
   display: none;
 }
+
+.jcgrow, #carouselInsights {
+  background-image: linear-gradient(to bottom right,  #00afefc4, #1C75BC);
+
+  color: white;
+}
+
+.nav-item:hover {
+  border-bottom: 3px solid #1C75BC;
+}
+
+header nav {
+  border-bottom: 8px solid #1C75BC;
+}
+
+.btn-primary {
+  background-color: #1C75BC;
+}
+
+a {
+  color: black;
+}
+
+a:hover {
+  text-decoration: none;
+  color:#b1aea7;
+}
+
+.accordion button {
+  color: black;
+}
