--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@ code {
 }
 
 .jcgrow, #carouselInsights {
-  background-image: linear-gradient(to bottom right,  #00afefc4, #1C75BC);
+  background-image: linear-gradient(#00afefc4, #1C75BC);
 
   color: white;
 }
@@ -91,3 +91,4 @@ a:hover {
 .accordion button {
   color: black;
 }
+
